<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/recycle_testdatelist"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/ripple_effect_noround"
    android:clickable="true"
    android:gravity="center_vertical"
    android:paddingStart="8dp"
    android:paddingEnd="8dp">


    <TextView
        android:id="@+id/text_test_timetitle"
        android:layout_width="wrap_content"
        android:layout_height="70dp"
        android:layout_gravity="center"
        android:layout_marginStart="15dp"
        android:layout_weight="0"
        android:gravity="center|start"
        android:text="@string/text_time"
        android:textColor="#000000"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/text_test_timedetail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="0dp"
        android:layout_weight="3"
        android:gravity="center_vertical"
        android:text="@string/text_time1000"
        android:textColor="#000000"
        android:textSize="30sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/text_test_loctitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:gravity="center_vertical"
        android:text="@string/text_loc"
        android:textColor="#000000"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/text_test_locdetail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="20dp"
        android:layout_weight="0"
        android:gravity="center|end"
        android:text="@string/text_test_locaion"
        android:textColor="#000000"
        android:textSize="16sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:scaleType="centerCrop"
        app:srcCompat="@drawable/ic_button_clickarrow" />

</LinearLayout>
