<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/menu1_testinfopage"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="9.6">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.5"
        android:background="#ffffff"
        android:orientation="vertical">

        <TextView
            android:id="@+id/text_menu_classic_title_test"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:paddingStart="30dp"
            android:paddingEnd="0dp"
            android:text="@string/text_testinfotitle"
            android:textColor="#000000"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="1.4">

            <TextView
                android:id="@+id/text_menu_test_bookname_tt"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:layout_weight="1"
                android:ellipsize="end"
                android:maxLines="1"
                android:paddingStart="30dp"
                android:paddingEnd="0dp"
                android:text="@string/text_testbooktitle"
                android:textColor="#000000"
                android:textSize="36sp" />

            <View
                android:id="@+id/view3"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="0.1" />

            <Button
                android:id="@+id/btn_cancel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="22dp"
                android:layout_marginEnd="30dp"
                android:layout_weight="0.3"
                android:background="@drawable/ripple_effect_login"
                android:paddingStart="0dp"
                android:paddingEnd="0dp"
                android:text="@string/cancel_test"
                android:textColor="#FFFFFF"
                android:textSize="18sp" />


        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/textView8"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="bottom"
        android:layout_weight="9"
        android:background="#ffffff"
        android:orientation="vertical"
        android:weightSum="10">

        <TextView
            android:id="@+id/text_menu3_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:paddingStart="30dp"
            android:paddingEnd="0dp"
            android:text="@string/text_testinfodetail"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal"
            android:weightSum="2">

            <TextView
                android:id="@+id/text_menu_test_1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="0dp"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/text_testinfodetail_1"
                android:textColor="#000000"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/text_menu_test_1_detail"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="0dp"
                android:layout_marginEnd="30dp"
                android:layout_weight="1"
                android:gravity="right|center_vertical"
                android:text="@string/blabla"
                android:textColor="#000000"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/text_menu_test_2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="0dp"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/text_testinfodetail_2"
                android:textColor="#000000"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/text_menu_test_2_detail"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="0dp"
                android:layout_marginEnd="30dp"
                android:layout_weight="1"
                android:gravity="right|center_vertical"
                android:text="@string/blabla"
                android:textColor="#000000"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/text_menu_test_3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="0dp"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/text_testinfodetail_3"
                android:textColor="#000000"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/text_menu_test_3_detail"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="0dp"
                android:layout_marginEnd="30dp"
                android:layout_weight="1"
                android:gravity="right|center_vertical"
                android:text="@string/blabla"
                android:textColor="#000000"
                android:textSize="20sp" />
        </LinearLayout>

        <Button
            android:id="@+id/btn_setalarm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/ripple_effect_test"
            android:gravity="center"
            android:text="@string/text_setAlarm"
            android:textColor="@color/colorSejongRED" />

        <TextView
            android:id="@+id/text_alarmlist"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:clickable="false"
            android:gravity="center"
            android:text="@string/noalarm"
            android:textColor="#000000"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/text_alarmlist2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="30dp"
            android:clickable="true"
            android:drawableRight="@drawable/ic_clear"
            android:gravity="center"
            android:text=""

            android:textColor="#000000"
            android:textSize="22sp" />

    </LinearLayout>
</LinearLayout>
