<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="9.4">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.3"
        android:background="#ffffff"
        android:orientation="vertical">

        <TextView
            android:id="@+id/text_menu_classic_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:paddingStart="30dp"
            android:paddingEnd="0dp"
            android:text="@string/text_classic"
            android:textColor="#000000"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/text_menu_classic_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:paddingStart="30dp"
            android:paddingEnd="0dp"
            android:text="@string/text_reserv_test"
            android:textColor="#000000"
            android:textSize="36sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.1"
        android:visibility="invisible" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="bottom"
        android:layout_weight="3"
        android:background="#ffffff"
        android:orientation="vertical"
        android:weightSum="6">

        <TextView
            android:id="@+id/textView10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="0dp"
            android:layout_marginBottom="0dp"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:paddingStart="0dp"
            android:paddingEnd="30dp"
            android:text="@string/text_test_inf"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView11"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="0dp"
                android:layout_weight="1"
                android:gravity="start|center_vertical"
                android:text="@string/text_name"
                android:textColor="#000000"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/text_stu_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="0dp"
                android:layout_marginEnd="30dp"
                android:layout_weight="1"
                android:gravity="center_vertical|end"
                android:text="@string/blabla"
                android:textColor="#000000"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView14"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="0dp"
                android:layout_weight="1"
                android:gravity="start|center_vertical"
                android:text="@string/text_id"
                android:textColor="#000000"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/text_stu_id"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="0dp"
                android:layout_marginEnd="30dp"
                android:layout_weight="1"
                android:gravity="center_vertical|end"
                android:text="@string/blabla"
                android:textColor="#000000"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView16"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="0dp"
                android:layout_weight="1"
                android:gravity="start|center_vertical"
                android:text="@string/text_major"
                android:textColor="#000000"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/text_stu_major"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="0dp"
                android:layout_marginEnd="30dp"
                android:layout_weight="1"
                android:gravity="center_vertical|end"
                android:text="@string/blabla"
                android:textColor="#000000"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView18"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="0dp"
                android:layout_weight="1"
                android:gravity="start|center_vertical"
                android:text="@string/text_book_date"
                android:textColor="#000000"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/text_stu_bookdate"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="0dp"
                android:layout_marginEnd="30dp"
                android:layout_weight="1"
                android:gravity="center_vertical|end"
                android:text="@string/blabla"
                android:textColor="#000000"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView20"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="0dp"
                android:layout_weight="1"
                android:gravity="start|center_vertical"
                android:text="@string/text_book_time"
                android:textColor="#000000"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/text_stu_booktime"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="0dp"
                android:layout_marginEnd="30dp"
                android:layout_weight="1"
                android:gravity="center_vertical|end"
                android:text="@string/blabla"
                android:textColor="#000000"
                android:textSize="18sp" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="6"
        android:background="#ffffff"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView22"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="0dp"
            android:gravity="center"
            android:text="@string/text_ifyourinfoiscor"
            android:textSize="18sp" />

        <Spinner
            android:id="@+id/spinner_menu2_1"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/spinner_design" />

        <Spinner
            android:id="@+id/spinner_menu2_2"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/spinner_design" />

        <Button
            android:id="@+id/btn_gobook"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="20dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="0dp"
            android:background="@drawable/ripple_effect_gray"
            android:gravity="center"
            android:text="@string/apply"
            android:textColor="#ffffff"
            android:textSize="20sp" />

    </LinearLayout>
</LinearLayout>
