<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="9.4">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.3"
        android:background="#ffffff"
        android:orientation="vertical">

        <TextView
            android:id="@+id/text_menu_classic_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:paddingStart="30dp"
            android:paddingEnd="0dp"
            android:text="@string/text_classic"
            android:textColor="#000000"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/text_menu_classic_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:paddingStart="30dp"
            android:paddingEnd="0dp"
            android:text="@string/text_reserv_test"
            android:textColor="#000000"
            android:textSize="36sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.1"
        android:visibility="invisible" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="bottom"
        android:layout_weight="9"
        android:background="#ffffff"
        android:orientation="vertical"
        android:weightSum="10">

        <TextView
            android:id="@+id/text_menu2_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:text="@string/text_select_test_book"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/text_menu2_datepicker"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="40dp"
            android:background="@drawable/spinner_design"
            android:clickable="true"
            android:gravity="center_vertical"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:text="@string/datepick"
            android:textSize="18sp" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recyclerView_testdate"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="0dp"
            android:layout_marginEnd="0dp"
            android:background="@drawable/ripple_effect_all"
            android:clickable="true" />

    </LinearLayout>
</LinearLayout>
