<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="9.4">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.3"
        android:background="#ffffff"
        android:orientation="vertical">

        <TextView
            android:id="@+id/text_menu_library_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:paddingStart="30dp"
            android:paddingEnd="0dp"
            android:text="@string/text_library"
            android:textColor="#000000"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/text_menu_bookname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:paddingStart="30dp"
            android:paddingEnd="0dp"
            android:text="@string/text_search_book_name"
            android:textColor="#000000"
            android:textSize="36sp" />

        <TextView
            android:id="@+id/text_menu2_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center_vertical"
            android:paddingStart="30dp"
            android:paddingEnd="30dp"
            android:text="@string/text_search_book_result"
            android:textSize="20sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/textView7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.1"
        android:visibility="invisible" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="bottom"
        android:layout_weight="9"
        android:background="#ffffff"
        android:orientation="vertical"
        android:weightSum="10">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recyclerView_search"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="0dp"
            android:layout_marginEnd="0dp"
            android:background="@drawable/ripple_effect_all"
            android:clickable="true" />

    </LinearLayout>
</LinearLayout>
